@@ -1,3 +1,8 @@
+2018-07-31  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* value.c (value_contents_copy_raw): Add assert to check memory
+	accesses.
+
 2018-07-30  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* eval.c (evaluate_subexp_for_sizeof): Check for array type before
